# wildcat

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  mac_build.txt  main.cc
core/: config.h
core/components/: Sprite.cc  Transform.h
core/ecs/: Component.cc  ComponentsVector.h  Drawable.h  Entity.cc  comp_traits.h
core/globals/: Director.h  World.cc  World.h
core/graphics/: Color.cc  Pixel.h  SmartSurface.cc  SmartSurface.h  SurfaceCache.h
core/managers/: EntityManager.cc  EntityManager.h
core/s2x/: basics.cc  basics.h  events.h  video.h
core/systems/: render_system.h  script_system.h  transform_update_system.cc  transform_update_system.h
lib/sdl2/: FindSDL2.cmake
src/: MainActivity.cc  MainActivity.h  Makefile  main.cc
src/core/: config.h  main.cc  main_loop.cc  main_loop.h
src/core/audio/: AudioStudio.h  SoundEngineer.h  audio_engine_types.h  basic_audio_engine.h
src/core/components/: ActionReceiver.h  Body.cc  Body.h  BoundingBox.h  Crowd.cc  Crowd.h  Dictionary.h  JSON.h  KeyboardEvent.h  KeyboardEventReceiver.h  KeyboardReceiver.h  MouseReceiver.h  Node.cc  Node.h  Script.h  ScriptInterface.h  Sprite.cc  Sprite.h  SurfacePainter.h  Table.h  Text.cc  Text.h  Transform.cc  Transform.h
src/core/ecs/: Component.cc  Component.h  ComponentsVector.h  Drawable.cc  Drawable.h  Entity.cc  Entity.h  System.cc  System.h  comp_traits.h
src/core/globals/: Camera.h  Director.cc  Director.h  Scene.cc  Scene.h  SceneGraph.h  World.h
src/core/graphics/: Atlas.h  Camera.h  Color.cc  Color.h  Director.cc  Director.h  Flipbook.cc  Flipbook.h  (+11 more)
(+57 files in other folders)
